infra/k8s/apps/ticketing/overlays/dev-app/client-wait-gateway-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  template:
    spec:
