infra/k8s/apps/ticketing/overlays/dev-app/gateway-dev-tuning-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-gateway
spec:
  template:
    spec:
      containers:
        - name: kong
